--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
     <footer>
       <div class="socials">
-        <a href="https://instagram.com/samyawsutha?igshid=OGQ5ZDc2ODk2ZA=="><i data-feather="instagram"></i></a>
+        <a href=https://www.instagram.com/samyawsutha><i data-feather="instagram"></i></a>
         <a href="https://youtube.com/@komangsamyawiryasuta1878?si=uQCxy_c0LfOn3H1B"><i data-feather="youtube"></i></a>
         <a href="https://www.facebook.com/samya.wiryasuta.1?mibextid=ZbWKwL"><i data-feather="facebook"></i></a>
       </div>
